# zed-semgrep

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
src/: lib.rs
